--- a/cire-perdue.html
+++ b/cire-perdue.html
@@ -300,7 +300,6 @@
 												Cette solution élimine la barrière de l’investissement dans un outillage de production ou pour les projets avec de faibles quantités de production, qui sont freinés par l’investissement dans l’outillage.</p>
 											<div class="text-center">
 											<span class="anim-hover-scale-1-1 transition-3ms d-inline-block">
-												<a href="demo-beauty-salon-about.html" class="btn btn-primary positive-ls-3 font-weight-normal btn-px-5 btn-py-3 text-uppercase appear-animation animated fadeInUpShorterPlus appear-animation-visible align-center" data-appear-animation="fadeInUpShorterPlus" data-appear-animation-delay="900" data-plugin-options="{'minWindowWidth': 0}" style="animation-delay: 900ms;">Découvrez-en plus</a>
 											</span>
 										  </div>
 										</div>
@@ -380,7 +379,7 @@
 				<div class="container container-xl-custom text-center align-items-center justify-content-center py-4">
 					<div class="d-inline-flex align-items-center mx-auto flex-wrap flex-lg-nowrap justify-content-center">
 						<h2 class="text-light font-weight-bold my-0 px-4 mb-3 mb-lg-0">Pour plus d'informations</h2>
-						<a href="demo-construction-2-contact-us.html" class="btn btn-outline btn-light rounded-0 text-hover-dark custom-btn-white text-3 font-weight-bold mt-4 mb-2 my-md-0 px-5 ms-2 py-3">CONTACTER-NOUS</a>
+						<a href="contact.html" class="btn btn-outline btn-light rounded-0 text-hover-dark custom-btn-white text-3 font-weight-bold mt-4 mb-2 my-md-0 px-5 ms-2 py-3">CONTACTER-NOUS</a>
 					</div>
 				</div>
 			</section>
