--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
 											<p class="text-color-default text-4 font-weight-normal line-height-7 mb-4 appear-animation animated fadeInUpShorterPlus appear-animation-visible text-justify" data-appear-animation="fadeInUpShorterPlus" data-appear-animation-delay="700" data-plugin-options="{'minWindowWidth': 0}" style="animation-delay: 700ms;">   Ecrimesa Group, a plus de 50 ans d’expérience dans le monde de la fonderie cire-perdue.La fonderie cire-perdue est un processus de fonderie très polyvalent, permettant une grande liberté dans la conception des pièces, des pièces complexes, multifonctions et une grande variété d’alliages. Elle est particulièrement adaptée lorsqu’il s’agit de remplacer un assemblage avec une bonne qualité de surface, et d’une grande flexibilité dans la taille des lots.</p>
 											<div class="text-center">
 											<span class="anim-hover-scale-1-1 transition-3ms d-inline-block">
-												<a href="demo-beauty-salon-about.html" class="btn btn-primary positive-ls-3 font-weight-normal btn-px-5 btn-py-3 text-uppercase appear-animation animated fadeInUpShorterPlus appear-animation-visible align-center" data-appear-animation="fadeInUpShorterPlus" data-appear-animation-delay="900" data-plugin-options="{'minWindowWidth': 0}" style="animation-delay: 900ms;">Découvrez-en plus</a>
+												<a href="cire-perdue.html" class="btn btn-primary positive-ls-3 font-weight-normal btn-px-5 btn-py-3 text-uppercase appear-animation animated fadeInUpShorterPlus appear-animation-visible align-center" data-appear-animation="fadeInUpShorterPlus" data-appear-animation-delay="900" data-plugin-options="{'minWindowWidth': 0}" style="animation-delay: 900ms;">Découvrez-en plus</a>
 											</span>
 										  </div>
 										</div>
@@ -636,7 +636,7 @@
 											<p class="text-color-default text-4 font-weight-normal line-height-7 mb-4 appear-animation animated fadeInUpShorterPlus appear-animation-visible text-justify" data-appear-animation="fadeInUpShorterPlus" data-appear-animation-delay="700" data-plugin-options="{'minWindowWidth': 0}" style="animation-delay: 700ms;">Le MIM combine la polyvalence de l’injection avec les technologies de frittage pour produire des pièces de haute densité en aciers avec de bonnes tolérances géométriques et caractéristiques mécaniques.Le moulage par injection de métal est une technologie appropriée pour fabriquer des pièces de géométrie complexe de petite à moyenne taille dans une large gamme de matériaux, comme les aciers inoxydables, les aciers de faiblement alliés, les aciers doux, les aciers magnétiques, les aciers d’outillage et les céramiques.</p>
 											<div class="text-center">
 											<span class="anim-hover-scale-1-1 transition-3ms d-inline-block">
-												<a href="demo-beauty-salon-contact.html" class="btn btn-primary positive-ls-3 font-weight-normal btn-px-5 btn-py-3 text-uppercase appear-animation animated fadeInUpShorterPlus appear-animation-visible" data-appear-animation="fadeInUpShorterPlus" data-appear-animation-delay="900" data-plugin-options="{'minWindowWidth': 0}" style="animation-delay: 900ms;">Découvrez-en plus</a>
+												<a href="mim.html" class="btn btn-primary positive-ls-3 font-weight-normal btn-px-5 btn-py-3 text-uppercase appear-animation animated fadeInUpShorterPlus appear-animation-visible" data-appear-animation="fadeInUpShorterPlus" data-appear-animation-delay="900" data-plugin-options="{'minWindowWidth': 0}" style="animation-delay: 900ms;">Découvrez-en plus</a>
 											</span>
 										   </div>
 										</div>
@@ -676,7 +676,6 @@
 												Nos installations d’usinage comprennent des centres d’usinage horizontaux (Matsuura et Mazak) verticaux (Chiron), des machines de tournage à commande numérique avec et sans têtes motorisées (Muratec, Okuma). Le processus est homologué selon la norme IATF 16949.</p>
 											<div class="text-center">
 												<span class="anim-hover-scale-1-1 transition-3ms d-inline-block">
-												<a href="demo-beauty-salon-about.html" class="btn btn-primary positive-ls-3 font-weight-normal btn-px-5 btn-py-3 text-uppercase appear-animation animated fadeInUpShorterPlus appear-animation-visible" data-appear-animation="fadeInUpShorterPlus" data-appear-animation-delay="900" data-plugin-options="{'minWindowWidth': 0}" style="animation-delay: 900ms;">Découvrez-en plus</a>
 												</span>
 											</div>
 										</div>
@@ -696,7 +695,7 @@
 												Dans le souci de pouvoir proposer un produit fini, Ecrimesa à la possibilité d'offrir des services de sous-traitance. Ces services réalisés en Espagne ou dans d’autres pays de la Communauté européenne, consistent en la sous-traitance de: Prototypage rapide, Usinages, Traitement thermique, Traitement superficiel, Sous-ensemble, etc…</p>
 											<div class="text-center">
 											<span class="anim-hover-scale-1-1 transition-3ms d-inline-block">
-												<a href="demo-beauty-salon-contact.html" class="btn btn-primary positive-ls-3 font-weight-normal btn-px-5 btn-py-3 text-uppercase appear-animation animated fadeInUpShorterPlus appear-animation-visible" data-appear-animation="fadeInUpShorterPlus" data-appear-animation-delay="900" data-plugin-options="{'minWindowWidth': 0}" style="animation-delay: 900ms;">Découvrez-en plus</a>
+												<a href="telechargement.html" class="btn btn-primary positive-ls-3 font-weight-normal btn-px-5 btn-py-3 text-uppercase appear-animation animated fadeInUpShorterPlus appear-animation-visible" data-appear-animation="fadeInUpShorterPlus" data-appear-animation-delay="900" data-plugin-options="{'minWindowWidth': 0}" style="animation-delay: 900ms;">Découvrez-en plus</a>
 											</span>
 										   </div>
 										</div>
@@ -770,7 +769,7 @@
 				<div class="container container-xl-custom text-center align-items-center justify-content-center py-4">
 					<div class="d-inline-flex align-items-center mx-auto flex-wrap flex-lg-nowrap justify-content-center">
 						<h2 class="text-light font-weight-bold my-0 px-4 mb-3 mb-lg-0">Pour plus d'informations</h2>
-						<a href="demo-construction-2-contact-us.html" class="btn btn-outline btn-light rounded-0 text-hover-dark custom-btn-white text-3 font-weight-bold mt-4 mb-2 my-md-0 px-5 ms-2 py-3">CONTACTER-NOUS</a>
+						<a href="contact.html" class="btn btn-outline btn-light rounded-0 text-hover-dark custom-btn-white text-3 font-weight-bold mt-4 mb-2 my-md-0 px-5 ms-2 py-3">CONTACTER-NOUS</a>
 					</div>
 				</div>
 			</section>
