--- a/telechargement.html
+++ b/telechargement.html
@@ -406,7 +406,7 @@
 				<div class="container container-xl-custom text-center align-items-center justify-content-center py-4">
 					<div class="d-inline-flex align-items-center mx-auto flex-wrap flex-lg-nowrap justify-content-center">
 						<h2 class="text-light font-weight-bold my-0 px-4 mb-3 mb-lg-0">Pour plus d'informations</h2>
-						<a href="demo-construction-2-contact-us.html" class="btn btn-outline btn-light rounded-0 text-hover-dark custom-btn-white text-3 font-weight-bold mt-4 mb-2 my-md-0 px-5 ms-2 py-3">CONTACTER-NOUS</a>
+						<a href="contact.html" class="btn btn-outline btn-light rounded-0 text-hover-dark custom-btn-white text-3 font-weight-bold mt-4 mb-2 my-md-0 px-5 ms-2 py-3">CONTACTER-NOUS</a>
 					</div>
 				</div>
 			</section>
