--- a/telechargement.html
+++ b/telechargement.html
@@ -148,7 +148,7 @@
 			</header>
 
 		
-			<div role="main" class="main">
+			<div role="main" class="main" >
 				<div class="owl-carousel owl-carousel-light owl-carousel-light-init-fadeIn owl-theme manual dots-inside dots-horizontal-center show-dots-hover nav-inside nav-inside-plus nav-dark nav-md nav-font-size-md show-nav-hover mb-0" data-plugin-options="{'autoplayTimeout': 7000}" data-dynamic-height="['670px','670px','670px','550px','500px']" style="height: 670px;">
 					<div class="owl-stage-outer">
 						<div class="owl-stage">
@@ -238,7 +238,7 @@
 				</div>
 	
 
-				<div class="container ">
+				<div class="container " id="scroll-section">
 
 					<div class="row text-center pt-3">
 					
@@ -507,6 +507,14 @@
 
 		<!-- Theme Initialization Files -->
 		<script src="js/theme.init.js"></script>
-
+		<script>
+			window.addEventListener('load', function() {
+				const section = document.getElementById('scroll-section');
+				section.scrollIntoView({
+					behavior: 'smooth'
+				});
+			});
+			
+			</script>
 	</body>
 </html>
